agregando multer para post products

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,7 +26,7 @@
             <label>Categoria</label>
             <input type="text" name="category">
             <label>Imagenes</label>
-            <input type="file" multiple name="thumbnails" >
+            <input type="file" name="thumbnails" multiple >
 
             <input type="submit">
         </form>
